pre-index & ReadMe updated

--- a/templates/pre_index.html
+++ b/templates/pre_index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
-    <title>Live Streaming Demonstration</title>
+    <title>The Sign Language Decoder</title>
 </head>
 <body style="background-color: #000;color:white">
   <style>
@@ -23,7 +23,7 @@
       <h3>UCS757 Buliding Innovative Systems</h3>
     </div>
     <div class="col-4 text-center">
-      <img src="static/Logo.png" alt="Sign Language Interpreter" width="300px">
+      <img src="static/Logo.png" alt="The Sign Language Decoder" width="300px">
     </div>
     <div class="col-4 text-right">
       <h3>© Purnima Lal | 101803523</h3>
@@ -53,11 +53,11 @@
         <li>After clicking the button, a window on the right "Set hand histogram" will appear.</li> 
         <li>"Set hand histogram" will have 1 green square.</li>
         <li>Place your hand in that square. Make sure your hand covers the entire square. Hold your hand in that position.</li> 
-        <li>After 5 seconds, another window "Thresh" will appear where only white patches corresponding to the parts of the image which has your skin color should appear.</li> 
+        <li>After 10 seconds, another window "Thresh" will appear where only white patches corresponding to the parts of the image which has your skin color should appear.</li> 
         <li>Make sure the square is covered by your hand.</li> 
         <li>In case you are not successful then move your hand a little bit again or reload the page. </li> 
         <li>Repeat this until you get a good histogram.</li> 
-        <li>You will have <b>10 seconds</b> to get a good thresh. After which you move on to <b>Step 2</b>.</li> 
+        <li>You will have <b>5 seconds</b> to get a good thresh. After which you move on to <b>Step 2</b>.</li> 
       </ul>
 
       Step 2 - A new page will open after Thresh has been set. You can use your hand to make the Sign Language gestures and the corresponding converted text will be displayed. 
@@ -92,9 +92,9 @@
   </div>
   <!--  -->
 
-  <div class="mt-5">
-    <h2 class="text-center">Sample <a href="">(Github)</h2>
-    <img src="" alt="">
+  <div class="mt-5 text-center">
+    <h2 class="text-center">Sample Working <a href="https://github.com/purnima99/UCS757_SLI.git">(Github)</h2>
+    <img src="static/I-O.gif" alt="" width="50%">
   </div>
 
 </div>
