--- a/templates/tmp.html
+++ b/templates/tmp.html
@@ -47,23 +47,52 @@
           <div class="col-7 text-center" >
               <div class="frame text-center" >
                 <div class="video-feed">
-                  <img style="transform:scaleX(-1)" src="{{ url_for('video_feed_r') }}" width="0%">
+                  <!-- <img style="transform:scaleX(-1)" src="{{ url_for('video_feed_r') }}" width="0%"> -->
                   <!-- <div class="box"></div> -->
                 </div>
                 <!-- <img src="static/ASL.jpg" alt=""> -->
               </div>
               <h2 class="text-left">Sign Language Interpreter</h2>
-              <img src="{{ url_for('result') }}" width="100%" style="border:1px solid white">
+              <!-- <img src="{{ url_for('result') }}" width="100%" style="border:1px solid white"> -->
             </div>
             <div class="col-2" >
               <div class="video-feed" style="border:1px solid white">
-                <img src="{{ url_for('result_thresh') }}" width="100%">
+                <!-- <img src="{{ url_for('result_thresh') }}" width="100%"> -->
               </div>
             </div>
         </div>
     </div>
+    <div id="myModal" class="modal" tabindex="-1" role="dialog" style="color:#000">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Camera Issue</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>You camera is not being detected.</p>
+          </div>
+          <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div> -->
+        </div>
+      </div>
+    </div>
 
-    <!-- <div class="row">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+    
+    <script>
+      $(window).on('load', function() {
+        $('#myModal').modal('show');
+    });
+    </script>
+      <!-- <div class="row">
         <div class="col-lg-8  offset-lg-2">
             <h3 class="mt-5">Live Streaming</h3>
             <img src="{{ url_for('video_feed') }}" width="100%">
