--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
               <h3 class="text-center">
                 Set hand histogram
               </h3>
-              <img style="transform:scaleX(-1)" src="{{ url_for('video_feed') }}" width="80%">
+              <!-- <img style="transform:scaleX(-1)" src="{{ url_for('video_feed') }}" width="80%"> -->
               <div class="box"></div>
             </div>
           </div>
@@ -49,19 +49,47 @@
               <h3 class="text-center">
                 Thresh
               </h3>
-              <img src="{{ url_for('thresh_feed') }}" width="80%">
+              <!-- <img src="{{ url_for('thresh_feed') }}" width="80%"> -->
             </div>       
           </div>
         </div>
     </div>
+    <div id="myModal" class="modal" tabindex="-1" role="dialog" style="color:#000">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Camera Issue</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Your camera is not being detected</p>
+          </div>
+          <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div> -->
+        </div>
+      </div>
+    </div>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+    
     <script>
+      $(window).on('load', function() {
+        $('#myModal').modal('show');
+    });
+
       window.setTimeout(function(){
 
   // Move to a new location or you can do something else
-      window.location.href = "http://127.0.0.1:5000/convert";
+      // window.location.href = "http://127.0.0.1:5000/convert";
 
-      }, 16000);
+      }, 4000);
     </script>
 </div>
 </body>
