--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Your camera is not being detected</p>
+            <p>Your camera is not being detected.</p>
           </div>
           <!-- <div class="modal-footer">
             <button type="button" class="btn btn-primary">Save changes</button>
